Fix a typo in comment.

--- a/sk.html
+++ b/sk.html
@@ -712,7 +712,7 @@ h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
 <sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
 INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 LGORRI1&rarr;     SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
-[Listing has a typo (GGORIEXIT) on the next line, using correct value]
+[Listing has a typo (GGORRIEXIT) on the next line, using correct value]
 hJPQ GORRIEXIT+(GORRIEXIT/GORRIEXIT&#9419;1&times;(LGORRIEND+1))
 <sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORRI2
 <sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST       **CURRENT NEXT
