--- a/sk.html
+++ b/sk.html
@@ -783,7 +783,7 @@ SUBR1&rarr;      JPQ #
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=22 doc_page=20 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=22 doc_page=20 type=main proof=1]
 [Page header: "IES 2XMX 020"]
 
  200002|
@@ -798,7 +798,7 @@ I52&rarr;		hJMP BLOCKMAKER
 		hJMP READIT
  ORIGIN|
 FRESH START&rarr;
-		CSQ<sub>4</sub><sub>0</sub> [opcode not mentioned in the handbook?]
+		CSQ<sub>4</sub><sub>0</sub> [CSQ is a symex defined in the equalities table]
 		MOVE|NAFFB&rarr;AFFB
 		hLDE NAFFB
 		STE AFFB
@@ -808,7 +808,7 @@ FRESH START&rarr;
 		<sup>-</sup><sup>1</sup>JPX <sub>&alpha;</sub> #-2
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=23 doc_page=21 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=23 doc_page=21 type=code proof=1]
 [Page header: "IES 2XMX 001"]
 [Handwritten: "BUILD"]
 [Handwritten: "RDTX2=200126"]
@@ -841,7 +841,7 @@ STARTS&rarr;		RXF <sub>4</sub><sub>7</sub> 47START
 		SXD <sub>&alpha;</sub> CIRCLES-LIST
 		MKN <sub>1</sub><sub>.</sub><sub>6</sub> PAGE1
 		SXD <sub>&alpha;</sub> SCALERS-LIST
-		MKN <sub>1</sub><sub>.</sub><sub>9</sub> PAGE1 [guessing that it's <sub>9</sub>, not legible]
+		MKN <sub>1</sub><sub>.</sub><sub>9</sub> PAGE1 [best guess: <sub>9</sub>]
 47FIXL1&rarr;
 		SXD <sub>&alpha;</sub> POINTS-LIST
 		MKN <sub>1</sub><sub>.</sub><sub>5</sub> PAGE1
@@ -865,12 +865,12 @@ STARTS&rarr;		RXF <sub>4</sub><sub>7</sub> 47START
 		RSX <sub>&alpha;</sub><sub>|</sub><sub>&alpha;</sub> LIST+VORD
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=24 doc_page=22 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=24 doc_page=22 type=code proof=1]
 [Page header: "IES 2XMX 002"]
 
 		SXD <sub>&alpha;</sub> FIXEDS-LIST
 		MKN <sub>1</sub><sub>.</sub><sub>7</sub> PAGE1
-		<sup>2</sup> RSX<sub>&alpha;</sub> PAGE1
+		<sup>2</sup>RSX<sub>&alpha;</sub> PAGE1
 47LITEIT&rarr;
 		MOVEB&times;DESIGNATED&rarr;22&times;PAGE1
 		hLDE PAGE1
@@ -911,7 +911,7 @@ READIT&rarr;		<sup>1</sup>STE READITEX
 		STA 76BUT
 		INX <sub>?</sub> 1
 		DPX <sub>?</sub> 76TABLE
-PAGE1D&rarr;		SKZ <sub>1</sub><sub>.</sub><sub>6</sub> 76BUT [Handwritten "<- JUNK 2.1", "JUNK" is crossed out]
+PAGE1D&rarr;		SKZ <sub>1</sub><sub>.</sub><sub>6</sub> 76BUT [Handwritten: "<- JUNK 2.1", "JUNK" is crossed out]
 		hJPQ STOPMOVEP
 		SKZ <sub>1</sub><sub>.</sub><sub>?</sub> 76BUT
 		hJPQ STARTDRAW
@@ -921,7 +921,7 @@ PAGE1D&rarr;		SKZ <sub>1</sub><sub>.</sub><sub>6</sub> 76BUT [Handwritten "<- JU
 		hJPQ ERASE
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=25 doc_page=23 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=25 doc_page=23 type=code proof=1]
 [Page header: "IES 2XMX 003"]
 [Handwritten: "FOR MOVIE"]
 [Handwritten: "COPY 1.9"]
@@ -944,7 +944,7 @@ PAGE1D&rarr;		SKZ <sub>1</sub><sub>.</sub><sub>6</sub> 76BUT [Handwritten "<- JU
 		hJPQ MGPSTART
 		SKZ <sub>2</sub><sub>.</sub><sub>?</sub> 76BUT [Handwritten: "<- 1.1"]
 		hJPQ MAKECONS
-PAGE1E&rarr;		SKZ <sub>2</sub><sub>.</sub><sub>?</sub> 76BUT [Handwritten: "<- 1.2"]
+PAGE1E&rarr;		SKZ <sub>2</sub><sub>.</sub><sub>9</sub> 76BUT [Handwritten: "<- 1.2"]
 		hJPQ TRUEUP
 		SKZ <sub>2</sub><sub>.</sub><sub>6</sub> 76BUT [Handwritten: "<- 1.4"]
 		hJPQ MAKPATA
@@ -952,7 +952,7 @@ PAGE1E&rarr;		SKZ <sub>2</sub><sub>.</sub><sub>?</sub> 76BUT [Handwritten: "<- 1
 		hJPQ SUBPIC
 		SKZ <sub>2</sub><sub>.</sub><sub>3</sub> 76BUT
 		hJPQ DUMMY
-		SKZ <sub>1</sub><sub>.</sub><sub>?</sub> 76BUT
+		SKZ <sub>1</sub><sub>.</sub><sub>9</sub> 76BUT
 		hJPQ CPY1
 		SKZ <sub>2</sub><sub>.</sub><sub>5</sub> 76BUT
 		hJPQ CPY2
@@ -970,7 +970,7 @@ PAGE1E&rarr;		SKZ <sub>2</sub><sub>.</sub><sub>?</sub> 76BUT [Handwritten: "<- 1
 		hJPQ UNMAC
 		SKZ <sub>1</sub><sub>.</sub><sub>1</sub> 76BUT [Handwritten: "<- 2.8"]
 		hJPQ MOVEPIC
-		SKZ <sub>4</sub><sub>.</sub><sub>?</sub> 76BUT
+		SKZ <sub>4</sub><sub>.</sub><sub>6</sub> 76BUT
 		hJPQ ORDSTARTB	** BEST
 		SKZ <sub>4</sub><sub>.</sub><sub>5</sub> 76BUT
 		hJPQ ORDSTARTW  ** WORST
@@ -982,7 +982,7 @@ PAGE1F&rarr;		SKN <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> SWITCH	** IF 
 		hJPQ POINTSOUT
 		SKZ <sub>1</sub><sub>.</sub><sub>5</sub> 76BUT
 		hJPQ PICOUT
-		SKN <sub>4</sub><sub>.</sub><sub>1</sub> 76BUT
+		SKN <sub>4</sub><sub>.</sub><sub>3</sub> 76BUT [best guess: <sub>3</sub>]
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=26 doc_page=24 type=code]
