--- a/sk.html
+++ b/sk.html
@@ -1978,13 +1978,13 @@ DUM2&rarr;		MOVEL&equiv;IWHAT&times;&alpha;&rarr;PINS&times;&gamma;
 		<sup>1</sup>DPX <sub>&gamma;</sub><sub>|</sub><sub>&alpha;</sub> LIST+IWHAT
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=44 doc_page=42 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=44 doc_page=42 type=code proof=1]
 [Page header: "IES 2XMX 026"]
 
 DUM3&rarr;		<sup>1</sup>RSX <sub>&gamma;</sub><sub>|</sub><sub>&gamma;</sub> LIST+PATAP+1
 		LGORR&equiv;VCON&times;&alpha;=S&rarr;DUM4&rarr;DUM6
 DUM4&rarr;		<sup>1</sup>STE DUM4X
-		hLDE <sub>&alpha;</sub> LIST 	** &alpha; IS IPCON? [how are we supposed to know? :)]
+		hLDE <sub>&alpha;</sub> LIST 	** &alpha; IS IPCON?
 		<sup>1</sup>SED { IPCONS-LIST}
 		JPQ #+2
 DUM4X&rarr;		JPQ #
@@ -1998,16 +1998,16 @@ DUM4X&rarr;		JPQ #
 		<sup>1</sup>DPX <sub>&beta;</sub><sub>|</sub><sub>&alpha;</sub> IPCV+LIST
 		<sup>1</sup>RSX <sub>&gamma;</sub><sub>|</sub><sub>&gamma;</sub> LIST
 		JPQ DUM4X
-DUM5&rarr;		DPX <sub>&gamma;</sub> #+2
+DUM5&rarr;		DPX <sub>&gamma;</sub>#+2
 		hJPQ DELETE
-		REX <sub>&gamma;</sub> #
+		REX <sub>&gamma;</sub>#
 		JPQ DUM4X
-DUM4&rarr;		hLDE <sub>&gamma;</sub> LIST-1
+DUM6&rarr;		hLDE <sub>&gamma;</sub> LIST-1
 		h<sup>1</sup>SED { 0}
 		JPQ DUM7
 		<sup>1</sup><sup>6</sup>RSX <sub>&alpha;</sub> E	** NEED MORE POINTS
 		INX <sub>&alpha;</sub><sub>|</sub><sub>&gamma;</sub>
-		DEX <sub>&alpha;</sub> 1		** IS NEW VIRG PT
+		DEX <sub>&alpha;</sub> 1		** &alpha; IS NEW VIRG PT
 		MAKA&equiv;IPCONS&rarr;&beta;
 		PUT|IPCV,&beta;&rarr;IPCOTP,&alpha;
 		RSX <sub>&alpha;</sub> ATBITS+1
@@ -2022,7 +2022,7 @@ DUM7&rarr;		RSX <sub>&alpha;</sub> ATBITS+1
 		RSX <sub>&gamma;</sub><sub>|</sub><sub>&alpha;</sub> LIST+IWHAT
 		LDA <sub>&gamma;</sub> LIST+PSIZE
 		STA MATD
-		LGORR&equiv;VCON&times;&alpha;=S&rarr;DUM8 [really 8?]
+		LGORR&equiv;VCON&times;&alpha;=S&rarr;DUM8 [best guess: DUM8]
 DUMMEX&rarr;		JPQ #
 DUM8&rarr;		<sup>1</sup>STE DUM8X
 		RSX <sub>S</sub><sub>|</sub><sub>&alpha;</sub> LIST+TYPE
@@ -2033,10 +2033,10 @@ DUM8X&rarr;		JPQ #
 		LDAB&equiv;VA<sub>T</sub>
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=45 doc_page=43 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=45 doc_page=43 type=code proof=1]
 [Page header: "IES 2XMX 027"]
 
-		RSX <sub>&epsilon;</sub><sub>|</sub><sub>&alpha;</sub> LIST+IPCP [epsilon out of context?]
+		RSX <sub>&alpha;</sub><sub>|</sub><sub>&alpha;</sub> LIST+IPCP [best guess: <sub>&alpha;</sub> before pipe in subscript]
 		STAB&equiv;VA<sub>&alpha;</sub>
 		RSX <sub>S</sub><sub>|</sub><sub>&alpha;</sub> LIST+TYPE
 		hBPQ <sub>S</sub> LIST+MOVIT
@@ -2089,10 +2089,10 @@ COPYIST&rarr;
 		<sup>1</sup>STE COPYX
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=46 doc_page=44 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=46 doc_page=44 type=code proof=1]
 [Page header: "IES 2XMX 030"]
 
-		MOVE|{ COPYMOVE}&rarr;<sup>1</sup> COPYMOVE-1 [what is this <sup>1</sup> syntax?]
+		MOVE|{ COPYMOVE}&rarr;<sup>1</sup> COPYMOVE-1 [syntax: passing RC block as macro argument]
 		SKZ LPLOST
 		JPQ COPYX
 		hJPQ STOPMOVEP
@@ -2100,7 +2100,7 @@ COPYIST&rarr;
 		LGORR&equiv;SPECB&times;&alpha;=S&rarr;COPY1&rarr;COPYX
 COPY1&rarr;		<sup>1</sup>STE COPY1X
 		hLDE <sub>&alpha;</sub> LIST+PNAME
-		<sup>1</sup>SED COPYNUM	** ?PIC TO COPY [possibly #?]
+		<sup>1</sup>SED COPYNUM	** #PIC TO COPY
 		JPQ COPYIT
 COPY1X&rarr;		JPQ #
 COPYIT&rarr;		LDA SCSZ
@@ -2111,6 +2111,7 @@ COPYIT&rarr;		LDA SCSZ
 		LDAB&equiv;PSPL
 		STAB&equiv;MATRX
 		LDA <sub>&alpha;</sub> LIST+PSIZE
+		STA MATD
 COPYITA&rarr;
 		DPX <sub>&alpha;</sub> COPYPIC		** PIC TO COPY
 		LGORR&equiv;PPART&times;&alpha;=S&rarr;COPYDUP
@@ -2127,7 +2128,7 @@ COPYDUP&rarr;
 		hLDE <sub>&alpha;</sub><sub>|</sub><sub>T</sub> LIST
 		STE <sub>&gamma;</sub><sub>|</sub><sub>T</sub> LIST
 		INX <sub>T</sub> 1
-		<sup>-</sup><sup>1</sup>JPX <sub>S</sub> #-1
+		<sup>-</sup><sup>1</sup>JPX <sub>S</sub> #-3
 		REX <sub>&alpha;</sub><sub>|</sub><sub>&gamma;</sub>
 		S&#9635;TYPE,&alpha;
 		hBPQ <sub>S</sub> LIST+MOVIT
